# sqlite3-vecdb-poc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
demo/: Cargo.toml  README.md  index.html
demo/src/: lib.rs
docs/: build-info.js  package.json  vectdb_demo.d.ts  vectdb_demo.js  vectdb_demo_bg.wasm  vectdb_demo_bg.wasm.d.ts
documentation/: architecture.md  design.md  plan.md  prd.md  process.md  status.md  vector-db-research.md
examples/: README.md
scripts/: build.sh  serve.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/clients/: mod.rs  ollama.rs
src/config/: mod.rs
src/domain/: mod.rs
src/repositories/: mod.rs  vector_store.rs
src/server/: mod.rs
src/services/: chunking.rs  ingestion.rs  mod.rs  search.rs
static/: README.md  index.html
